# peru_inei_data

./: pyproject.toml  scrapper.py
INEI/: enaho.ipynb  enaho.py
