[tool.poetry]
name = "peru-inei-data"
version = "0.1.0"
description = "API para los microdatos de INEI"
authors = ["tjhon <fr.jhonk@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "0.0.2"
pandas = "2.2.2"
selenium = "^4.24.0"
ipykernel = "^6.29.5"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
